--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=apring-6-reactive-mongodb
+#spring.data.mongodb.username=root
+#spring.data.mongodb.password=example
+#spring.data.mongodb.database=admin
+#spring.data.mongodb.host=localhost
